tests/behavior/success/builtin_member_variable.bz
function main()
{
	let &_ = int32.max;
}
