tests/behavior/error/int_modulo_by_zero_u32.bz
function main()
{
	let a = 1u32;
	let b = 0u32;
	let _ = a % b;
}
